# gameboy-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: ci.yml
include/: cartridge.hpp  cpu.hpp  gpu.hpp  input.hpp  memory.hpp  timers.hpp  utils.hpp
src/: cartridge.cpp  cpu.cpp  gpu.cpp  input.cpp  main.cpp  memory.cpp  timers.cpp
tests/: CMakeLists.txt  test_cpu.cpp  test_memory.cpp
